# rosclaw

./: .gitignore  README.md  package.json  pnpm-lock.yaml
docker/: Dockerfile.ros2  Dockerfile.rosclaw  docker-compose.yml
examples/turtlebot-chat/: README.md
extensions/openclaw-canvas/: README.md  package.json  tsconfig.json
extensions/openclaw-plugin/: index.ts  openclaw.plugin.json  package.json  tsconfig.json
extensions/openclaw-plugin/skills/navigate-to/: SKILL.md
extensions/openclaw-plugin/skills/pick-object/: SKILL.md
extensions/openclaw-plugin/skills/take-photo/: SKILL.md
extensions/openclaw-plugin/src/: service.ts
extensions/openclaw-plugin/src/commands/: estop.ts
extensions/openclaw-plugin/src/context/: robot-context.ts
extensions/openclaw-plugin/src/safety/: validator.ts
extensions/openclaw-plugin/src/tools/: index.ts  ros2-action.ts  ros2-camera.ts  ros2-introspect.ts  ros2-param.ts  ros2-publish.ts  ros2-service.ts  ros2-subscribe.ts
ros2_ws/src/rosclaw_agent/: package.xml  setup.py
ros2_ws/src/rosclaw_agent/rosclaw_agent/: agent_node.py
ros2_ws/src/rosclaw_discovery/: package.xml  setup.cfg  setup.py
ros2_ws/src/rosclaw_discovery/rosclaw_discovery/: discovery_node.py
ros2_ws/src/rosclaw_msgs/: CMakeLists.txt  package.xml
